Fix footer spacing

--- a/laravel/public/assets/css/style.css
+++ b/laravel/public/assets/css/style.css
@@ -23,7 +23,7 @@ html, body {
 .wrapper {
     min-height: 100%;
     height: auto !important;
-    margin: 0 auto -130px; /* the bottom margin is the negative value of the footer's height */
+    margin: 0 auto -150px; /* the bottom margin is the negative value of the footer's height */
 }
 footer, .push {
     height: 130px; /* .push must be the same height as .footer */
